// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The popover should not render in body when not open 1`] = `null`;

exports[`The popover should not render in body when not open 2`] = `""`;

exports[`The popover should render in body when open 1`] = `<div />`;

exports[`The popover should render in body when open 2`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <div class=\\"popover\\" style=\\"top: 1px; height: 30px; left: 2px;\\">
      <div>My item 1</div>
      <div>My item 2</div>
      <div>My item 3</div>
    </div>
  </div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"backdrop\\"></div>
</div>"
`;

exports[`The popover should take its dimensions from the positioner 1`] = `
"<div>
  <div data-reactroot=\\"\\" class=\\"container\\">
    <div class=\\"popover\\" style=\\"top: 1px; height: 30px; left: 2px;\\">
      <div>My item 1</div>
    </div>
  </div>
</div>
<div>
  <div data-reactroot=\\"\\" class=\\"backdrop\\"></div>
</div>"
`;
